# masters-thesis

./: .gitignore  README.md  main.bfc.blg  main.blg  notebook.ipynb  notes.md  project-plan.md  pyproject.toml  scratchpad.md
report/: bibliography.bib  main..blg  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.bfc.blg  main.blg  main.out  main.run.xml  main.synctex(busy)  main.tex  main.tex.blg  main.toc  readme.md  thesis.tex
report/Backmatter/: Appendix.tex  Backpage.tex
report/Chapters/: 01_Introduction.tex  02_Background.tex  03_Data.tex  04_Methods.tex  05_Results.tex  06_Discussion_and_Conclusion.tex
report/Frontmatter/: Abstract.tex  Acknowledgements.tex  Approval.tex  Frontpage.tex
report/Setup/: Preamble.tex  Settings.tex  Statics.tex
report/figures/: diffusion-model.key  seq2seq.eps
slides/: Vejledning 14. marts 2024.key  Vejledning 18. april 2024.key  Vejledning 21. marts 2024.key  Vejledning 25. april 2024.key
src/smpl/: model.py  render.py
